feat(currency): add endpoint to get currencies
